# hapi-core-solana

./: README.md  package.json
cli/: .gitignore  Cargo.toml  test
cli/src/: main.rs  tools.rs
cli/src/command/: cmd_add_reporter.rs  cmd_create_address.rs  cmd_create_case.rs  cmd_create_community.rs  cmd_create_network.rs  cmd_create_reporter.rs  cmd_get_address.rs  cmd_get_case.rs  cmd_get_community.rs  cmd_get_network.rs  cmd_get_reporter.rs  cmd_list_accounts.rs  cmd_report_address.rs  cmd_report_case.rs  cmd_update_address.rs  cmd_update_case.rs  cmd_update_reporter.rs  cmd_view_address.rs  cmd_view_case.rs  cmd_view_network.rs  cmd_view_reporer.rs  cmd_view_reporter.rs  mod.rs  process_create_network.rs  process_view_network.rs
cli/tests/: main.sh
cli/tests/keys/: nobody.json  reporter-alice.json  reporter-bob.json
program/: .gitignore  Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs
program/src/instruction/: authority.rs  mod.rs  network.rs  reporter.rs
program/src/processor/: mod.rs  process_add_reporter.rs  process_create_address.rs  process_create_case.rs  process_create_community.rs  process_create_network.rs  process_create_reporter.rs  process_report_address.rs  process_report_case.rs  process_report_event.rs  process_update_address.rs  process_update_case.rs  process_update_community.rs  process_update_network.rs  process_update_reporter.rs
program/src/state/: address.rs  case.rs  community.rs  enums.rs  event.rs  mod.rs  network.rs  reporter.rs
program/src/tools/: account.rs  mod.rs
program/tests/: process_add_reporter.rs  process_create_community.rs  process_create_network.rs  process_report_address.rs  process_report_case.rs  process_report_event.rs  process_update_case.rs  process_update_community.rs  process_update_network.rs  process_update_reporter.rs
program/tests/program_test/: cookies.rs  mod.rs  tools.rs
(+71 files in other folders)
