[package]
authors = ["Andrei Arsenin <andrei.arsenin@hapi.one>"]
description = "HAPI Core Program Client"
edition = "2018"
license = "BSL-1.1"
name = "hapi-core-solana-cli"
version = "0.1.0"

[dependencies]
borsh = "0.8"
chrono = "0.4.19"
clap = "2.33.3"
colored = "2"
hapi-core-solana = {version = "^0.1", path = "../program", features = ["no-entrypoint"]}
solana-clap-utils = "1.7"
solana-cli-config = "1.7"
solana-client = "1.7"
solana-logger = "1.7"
solana-sdk = "1.7"

[[bin]]
name = "hapi-core-solana-cli"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
